# latent_verbalizer

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
data/CSV_files/: classification_data.csv
data/interpret/: caps_batch0.json  entropy_batch0.json
data/interpret/label_top3_llama70B/: classification_llama_70B_top3_labels_layer_0_caps_batch0.json  classification_llama_70B_top3_labels_layer_10_caps_batch0.json  classification_llama_70B_top3_labels_layer_11_caps_batch0.json  classification_llama_70B_top3_labels_layer_12_caps_batch0.json  classification_llama_70B_top3_labels_layer_13_caps_batch0.json  classification_llama_70B_top3_labels_layer_14_caps_batch0.json  classification_llama_70B_top3_labels_layer_15_caps_batch0.json  classification_llama_70B_top3_labels_layer_16_caps_batch0.json  classification_llama_70B_top3_labels_layer_17_caps_batch0.json  classification_llama_70B_top3_labels_layer_18_caps_batch0.json  classification_llama_70B_top3_labels_layer_19_caps_batch0.json  classification_llama_70B_top3_labels_layer_1_caps_batch0.json  classification_llama_70B_top3_labels_layer_20_caps_batch0.json  classification_llama_70B_top3_labels_layer_21_caps_batch0.json  classification_llama_70B_top3_labels_layer_22_caps_batch0.json  classification_llama_70B_top3_labels_layer_23_caps_batch0.json  (+8 more)
experiments/: README.md  categorization_analysis.ipynb  exp_utility.py
latent_verbalizer/: categorization_using_Llama.py  demo.ipynb  extract_layer_features_coca.py  generate_layers_captions_coca.py  interpret.yaml  utility.py
